# event-investigation-v3

./: .gitignore  README.md  docker-compose.yaml  update-requirements.txt
backend/: Dockerfile  main.py  pyproject.toml
backend/data/: records-001.json  records-002.json  records-003.json  records-004.json  records.json  score-rules.md  trades.json
backup/: records-002.json
backup/samples/: index.html  records.json
frontend/: .env.production  Dockerfile  index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: Header.jsx  HorizontalTimeline.jsx  Sidebar.jsx  ThemeToggle.jsx  Timeline.jsx
frontend/src/contexts/: LanguageContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useThemeStyles.js
frontend/src/i18n/: translations.js
frontend/src/styles/: themes.js
frontend/src/utils/: exportReport.js
